Added role watch activity (linked to role list activity)
string

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
             android:label="@string/role_list_label">
 
         </activity>
+
+        <activity
+            android:name=".architecture.presentation.RoleWatchActivity"
+            android:label="@string/role_watch_label">
+
+        </activity>
     </application>
 
 </manifest>
