Added Event swipe activity bound to main activity's play button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:label="@string/gamemode_selection_label">
 
         </activity>
+
+        <activity
+            android:name=".architecture.presentation.EventsSwipeActivity">
+
+        </activity>
     </application>
 
 </manifest>
